# llic

./: CMakeLists.txt  main.c
lib/: bytecode.c  bytecode.h  command.c  command.h  config.h  error.c  error.h  input.c  input.h  register.c  register.h  stack.c  stack.h  vm.c  vm.h
machine/: command.c  command.h  config.c  config.h  error.c  input.h  register.c  stack.c  stack.h  vm.c
